--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
+            android:autoVerify="true"
+            
             android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
@@ -19,17 +21,21 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
-            <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter> -->
+
+              <meta-data
+                android:name="flutter_deeplinking_enabled"
+                android:value="true" />
+            
         <intent-filter android:autoVerify="true">
+           <action android:name="android.intent.action.MAIN"/>
+         
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-
+            <category android:name="android.intent.category.LAUNCHER"/>
+            
             <data android:scheme="https" />
-            <data android:host="yourDomain.com" />
+            <data android:host="upcare.io" />
         </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
@@ -39,3 +45,9 @@
             android:value="2" />
     </application>
 </manifest>
+
+
+<!-- 
+    To Enable the link open the application by default, instead of another
+    android:launchMode="singleTask"
+ -->
